--- a/Flatbed.MDI/index1.html
+++ b/Flatbed.MDI/index1.html
@@ -10,7 +10,7 @@ title: Project Releases
 {% for repo in repos %}
   <h2>{{ repo }}</h2>
   <ul>
-  {% assign repo_releases = site.data.FlatbedMDI | where: "repo", repo %}
+  {% assign repo_releases = site.data.Flatbed.MDI | where: "repo", repo %}
   {% for release in repo_releases %}
     <li>
       <strong>{{ release.tag }}</strong> ({{ release.date }})
