Trying to read data file with dot symbol

--- a/Flatbed.MDI/index.html
+++ b/Flatbed.MDI/index.html
@@ -6,7 +6,7 @@ title: Flatbed.MDI
 <h1>Flatbed.MDI</h1>
 
 <ul>
-  {% for release in site.data["Flatbed.MDI"] %}
+  {% for release in site.data.FlatbedMDI %}
     <li>
       <strong>{{ release.tag }}</strong> ({{ release.date }})
       <ul>
