--- a/Flatbed-MDI-Avalon/index.html
+++ b/Flatbed-MDI-Avalon/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Flatbed.MDI.Avvalon
+title: Flatbed.MDI.Avalon
 ---
 
-<h1>Flatbed.MDI.Avvalon</h1>
+<h1>SAL Host MDI [Avalon]</h1>
 
 <ul>
   {% for release in site.data.Flatbed-MDI-Avalon %}
@@ -17,3 +17,21 @@ title: Flatbed.MDI.Avvalon
     </li>
   {% endfor %}
 </ul>
+
+MDI interface based on WPF <a href="https://github.com/Dirkster99/AvalonDock">Avalon MDI</a> component.
+
+<h3>Automation</h3>
+<p>Host will automate following actions:</p>
+<ol>
+	<li>Size and location of application and all of the opened windows.</li>
+	<li>Events handling through <code>System.Diagnostics.Trance</code> (All errors will be stored in separate window: View&rarr;Event List. All events will be stored at View&rarr;Output).</li>
+	<li>Moving window to working area after (SystemEvents.DisplaySettingsChanged) event is triggered.</li>
+	<li>Supported plugins with Windows Forms controls or WPF controls.</li>
+</ol>
+
+<h3>Installation</h3>
+<p>Extract all contents to empty folders, add required plugins to current directory and launch Flatbed.MDI.Avalon.exe file. If you required to launch separate instance of executable, then you need to add Kernel plugin (For example Kernel.Empty) or change keys <code>SAL_KernelName</code> and <code>SAL_KernelCompany</code> in the Flatbed.MDI.Avalon.dll.config file. Without changing default kernel plugin name all plugins collection will be combined and identified as default Kernel libraries with single settings storage.</p> <pre>/SAL_path:C:\MyApplication\</pre>
+
+<h3>Requirements</h3>
+<p>The application requires <a href="https://dotnet.microsoft.com/en-us/download/dotnet/7.0">.NET version 7 or higher</a> to work.</p>
+<img style="float:left;margin:0 20px 0 0" src="/Gallery.axd?M=0&K=25_304&S=640x480" />
