Added few custom tweaks into files using Jekyll engine

--- a/Flatbed-Dialog-Lite/index.html
+++ b/Flatbed-Dialog-Lite/index.html
@@ -5,6 +5,7 @@ title: Flatbed.Dialog.Lite
 
 <h1>SAL Host Dialog [Lite] (Dialog based Interface basic version)</h1>
 
+<h2>Releases ({{ site.data.Flatbed-Dialog-Lite | size }})</h2>
 <ul>
   {% for release in site.data.Flatbed-Dialog-Lite %}
     <li>
