--- a/Flatbed-Dialog/index.html
+++ b/Flatbed-Dialog/index.html
@@ -5,6 +5,7 @@ title: Flatbed.Dialog
 
 <h1>SAL Host Dialog (Dialog based Interface)</h1>
 
+<h2>Releases ({{ site.data.Flatbed-Dialog | size }})</h2>
 <ul>
   {% for release in site.data.Flatbed-Dialog %}
     <li>
