--- a/Flatbed-MDI/index.html
+++ b/Flatbed-MDI/index.html
@@ -5,6 +5,7 @@ title: Flatbed.MDI
 
 <h1>SAL Host MDI (Multiple Document Interface)</h1>
 
+<h2>Releases ({{ site.data.Flatbed-MDI | size }})</h2>
 <ul>
   {% for release in site.data.Flatbed-MDI %}
     <li>
