--- a/Flatbed-WorkerService/index.html
+++ b/Flatbed-WorkerService/index.html
@@ -5,6 +5,7 @@ title: Flatbed.WorkerService
 
 <h1>Host based as Windows Service applicationHost based as Windows Service application</h1>
 
+<h2>Releases ({{ site.data.Flatbed-WorkerService | size }})</h2>
 <ul>
   {% for release in site.data.Flatbed-WorkerService %}
     <li>
