--- a/Flatbed-MDI-Avalon/index.html
+++ b/Flatbed-MDI-Avalon/index.html
@@ -5,6 +5,7 @@ title: Flatbed.MDI.Avalon
 
 <h1>SAL Host MDI [Avalon]</h1>
 
+<h2>Releases ({{ site.data.Flatbed-MDI-Avalon | size }})</h2>
 <ul>
   {% for release in site.data.Flatbed-MDI-Avalon %}
     <li>
