Fixed header value

--- a/Flatbed-WorkerService/index.html
+++ b/Flatbed-WorkerService/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Flatbed.WorkerService
 ---
 
-<h1>Host based as Windows Service applicationHost based as Windows Service application</h1>
+<h1>Host based as Windows Service application</h1>
 
 <h2>Releases ({{ site.data.Flatbed-WorkerService | size }})</h2>
 <ul>
