Fixed files_list include path

--- a/Flatbed-Dialog-Lite/index.html
+++ b/Flatbed-Dialog-Lite/index.html
@@ -5,7 +5,7 @@ title: Flatbed.Dialog.Lite
 
 <h1>SAL Host Dialog [Lite] (Dialog based Interface basic version)</h1>
 
-{% include file_list.html releases=site.data.Flatbed-Dialog-Lite %}
+{% include files_list.html releases=site.data.Flatbed-Dialog-Lite %}
 
 <p>Basic dialog based interface to quickly open any plugin with UI.</p>
 <p>It will starts to enumerate all loaded plugins and try to open it UI by invoking <code>IMenuItem.OnClick</code>. It's done to simplify procedure to run simple tasks without describing user where he need to click to open an application.</p>
