--- a/Flatbed-Dialog/index.html
+++ b/Flatbed-Dialog/index.html
@@ -5,7 +5,7 @@ title: Flatbed.Dialog
 
 <h1>SAL Host Dialog (Dialog based Interface)</h1>
 
-{% include file_list.html releases=site.data.Flatbed-Dialog %}
+{% include files_list.html releases=site.data.Flatbed-Dialog %}
 
 <h3>Description</h3>
 
