--- a/Flatbed-MDI-Avalon/index.html
+++ b/Flatbed-MDI-Avalon/index.html
@@ -5,7 +5,7 @@ title: Flatbed.MDI.Avalon
 
 <h1>SAL Host MDI [Avalon]</h1>
 
-{% include file_list.html releases=site.data.Flatbed-MDI-Avalon %}
+{% include files_list.html releases=site.data.Flatbed-MDI-Avalon %}
 
 MDI interface based on WPF <a href="https://github.com/Dirkster99/AvalonDock">Avalon MDI</a> component.
 
