--- a/Flatbed-MDI/index.html
+++ b/Flatbed-MDI/index.html
@@ -5,7 +5,7 @@ title: Flatbed.MDI
 
 <h1>SAL Host MDI (Multiple Document Interface)</h1>
 
-{% include file_list.html releases=site.data.Flatbed-MDI %}
+{% include files_list.html releases=site.data.Flatbed-MDI %}
 
 <p>Show plugins that capable to show UI in MDI interface. As a base to MDI UI great component is used by Weifen Luo &mdash; <a href="http://sourceforge.net/projects/dockpanelsuite/">DockPanel Suite</a> (v2.3.1.0) (<a href="https://github.com/dockpanelsuite">New address</a>).</p>
 
